--- a/bot01.html
+++ b/bot01.html
@@ -10,7 +10,7 @@
     <h1>
         BIENVENIDO  A LA PRUEBA UNO chat bot
     </h1>
-    <h2>pide una pregunta</h2>
+    <h2>pide una preguntass</h2>
     <br/>
     <iframe src='https://webchat.botframework.com/embed/prueba01-a777-bot02?s=Q6qONYn1CXA.Hix3Y4qVxAoqHKkaypga9Yk_d_qwAIAljd506FFs3E0'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 </body>
