cambio en el titulo

--- a/bot01.html
+++ b/bot01.html
@@ -10,8 +10,7 @@
     <h2>pide una preguntass</h2>
     <br />
     <iframe
-      src="https://webchat.botframework.com/embed/prueba01-a777-bot02?s=Q6qONYn1CXA.Hix3Y4qVxAoqHKkaypga9Yk_d_qwAIAljd506FFs3E0"
-      style="min-width: 400px; width: 20%; min-height: 500px"
-    ></iframe>
+     <iframe src="https://web.powerva.microsoft.com/environments/Default-98201fef-d9f6-4e68-84f5-c2705074e342/bots/new_bot_6a9ea3a5d55d4df78cf71af55063a25a/webchat" frameborder="0" style="width: 100%; height: 100%;"></iframe>
+    </iframe>
   </body>
 </html>
