--- a/bot01.html
+++ b/bot01.html
@@ -6,11 +6,13 @@
     <title></title>
   </head>
   <body>
-    <h1>EJEMPLO 0110 2020 5050CON UN BOT</h1>
+    <h1>Pagina web de pruebas EQUIPO AZURE</h1>
     <h2>pide una preguntass</h2>
     <br />
     <iframe
-     <iframe src="https://web.powerva.microsoft.com/environments/Default-98201fef-d9f6-4e68-84f5-c2705074e342/bots/new_bot_6a9ea3a5d55d4df78cf71af55063a25a/webchat" frameborder="0" style="width: 100%; height: 100%;"></iframe>
-    </iframe>
+      src="https://web.powerva.microsoft.com/environments/Default-98201fef-d9f6-4e68-84f5-c2705074e342/bots/new_bot_6a9ea3a5d55d4df78cf71af55063a25a/webchat"
+      frameborder="0"
+      style="width: 20%; height: 400px"
+    ></iframe>
   </body>
 </html>
