cambio en el titulo

--- a/bot01.html
+++ b/bot01.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Pagina web de pruebas EQUIPO AZURE</h1>
-    <h2>pide una preguntass</h2>
+    <h2>pide una pregunta</h2>
     <br />
     <iframe
       src="https://web.powerva.microsoft.com/environments/Default-98201fef-d9f6-4e68-84f5-c2705074e342/bots/new_bot_6a9ea3a5d55d4df78cf71af55063a25a/webchat"
