cambio de tittulo

--- a/bot01.html
+++ b/bot01.html
@@ -6,7 +6,7 @@
     <title></title>
   </head>
   <body>
-    <h1>Pagina web de pruebas EQUIPO AZURE</h1>
+    <h1>Pagina web de pruebas EQUIPO GOOGLE</h1>
     <h2>pide una pregunta</h2>
     <br />
     <iframe
